--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "dev": "webpack serve --config ./bundler/webpack.dev.js"
   },
   "dependencies": {
+    "dat.gui": "^0.7.7",
+    "fastnoise-lite": "^0.0.1",
+    "noisejs": "^2.1.0",
+    "simplex-noise": "^3.0.1",
+    "three": "^0.126.0",
+    "wo-perlin": "^0.0.2"
+  },
+  "devDependencies": {
     "@babel/core": "^7.13.1",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/preset-env": "^7.13.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.0",
-    "dat.gui": "^0.7.7",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
@@ -20,10 +28,17 @@
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
-    "three": "^0.126.0",
     "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ],
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
